# homeworks

./: .gitignore  .gitmodules
homeworks/homework4/no_strings_attached/no_strings_attached/: CMakeLists.txt
homeworks/homework_4/no_strings_attached/: .clang-format  CMakeLists.txt  readme.md
homeworks/homework_4/no_strings_attached/examples/: CMakeLists.txt  split_strings.cpp  trim_strings.cpp
homeworks/homework_4/no_strings_attached/no_strings_attached/: CMakeLists.txt  string_split.cpp  string_split.h  string_split_test.cpp  string_trim.cpp  string_trim.h  string_trim_test.cpp
homeworks/homework_5/pixelator/: CMakeLists.txt
homeworks/homework_5/pixelator/examples/: CMakeLists.txt  pixelate.cpp
homeworks/homework_5/pixelator/pixelator/: CMakeLists.txt  drawer.cpp  drawer.hpp  drawer_test.cpp  image.hpp  image_test.cpp  pixelate_image.cpp  pixelate_image.hpp  pixelate_image_test.cpp  stb_image_data_view.cpp  stb_image_data_view.hpp  stb_image_data_view_test.cpp
